link to website page, not repo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to new location</title>
-<meta http-equiv="refresh" content="0; URL=uic-gfrc.github.io">
-<link rel="canonical" href="uic-gfrc.github.io">
+<meta http-equiv="refresh" content="0; URL=uic-gfrc.github.io/CookCounty-PropertyTaxes">
+<link rel="canonical" href="uic-gfrc.github.io/CookCounty-PropertyTaxes">
